--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Template</title>
+    <title>Application Ideas</title>
   </head>
   
   <body>
   
+    <?php
+      <span class="the-thing">Funny Sentences in PHP</span>
 
   </body>
 
